--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Click Jacker Tool | BEST FREE Click Jacking Tester | Clickjacking Tester </title>
+    <title>Click Jacking Tester</title>
     <!-- adsense -->
-    <meta name="keywords" content="Test Clickjacking, Online clickjacking test, Clickjacking tool, What is clickjacking, Fix clickjacking, Clickjacking vulnerability, Exploit clickjacking"/>
+    <meta name="keywords" content="FREE Clickjacking testing tool, with clickjacking POC and read about whats clickjacking Clickjacking tool, What is clickjacking, Fix clickjacking, Clickjacking vulnerability, Exploit clickjacking"/>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9344372779596610"
      crossorigin="anonymous"></script>
     <link rel="icon" href="https://i.ibb.co/CVZQ8Bt/Picsart-23-09-26-02-16-00-213.png">
@@ -14,34 +14,33 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <!-- my stylings -->
-    <script defer type="module" src="script.js"></script>
-    <script defer type="module" src="data.js"></script>
+    <script defer src="script.js"></script>
+    <script defer src="stylsheets/faq.js"></script>
     <link rel="stylesheet" href="stylsheets/style.css">
     <link rel="stylesheet" href="stylsheets/card.css">
     <link rel="stylesheet" href="stylsheets/footer.css">
+    <link rel="stylesheet" href="stylsheets/faq.css">
     <!-- social sharing -->
     <meta property="og:title" content="Clickjacking Tester">
     <meta property="og:description" content="Test for clickjacking vulnerabilities. Secure your web applications, take screenshot, share results, test HTTP and HTTPS headers.">
     <meta property="og:image" content="https://i.ibb.co/2nsccvQ/Black-White-Elegant-Phone-Review-Blog-Banner.png">
     <meta property="og:url" content="https://clickjacker.live">
     <meta property="og:type" content="website">
-    <!-- canonical  -->
-    <link rel="canonical" href="https://clickjacker.live">
   </head>
 <body>
 
   <nav style="background-color: #1b1a1a !important;" class="navbar navbar-expand-lg bg-dark navbar-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="https://clickjacker.live">Click Jacking Tester</a>
+      <a class="navbar-brand" href="index.html">Click Jacking Tester</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ms-auto">
-          <a class="nav-link active" aria-current="page" href="https://clickjacker.live">Home</a>
+          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           <a class="nav-link" href="About-us">About us</a>
+          <a class="nav-link" href="contact-us/">contact-us</a>
           <a class="nav-link" href="Privacy-policy/index.html">Privacy Policy</a>
-          <a class="nav-link" href="POC">Quick POC</a>
         </div>
       </div>
     </div>
@@ -64,7 +63,7 @@
       <div class="btn-shr">
         <button type="button" class="btn btn-success none" id="share-btn">Share results</button>
       </div>
-      <h5 class="center none" id="vlnTxt">Its vulnerabile, if it loads in Iframe</h5>
+      <h5 class="center none" id="vlnTxt">Its vulnerabile, if it loads in the frame</h5>
       <div class="container-1 sec-con">
         <div class="sec-frame" id="sec-frame">
         </div>
@@ -81,7 +80,77 @@
           </div>
         </div>
       </div>
+      <hr> 
+      <br>
+      <div class="container">
+        <div class="other txt">
+        </p>
+        <h3>Whats does this tool do? </h3>
+          Clickjacker.live provides you with a tool that is being used by world-class bug bounty hunters that can be used to test and report different websites for clickjacking vulnerabilities, it provides a user-friendly interface to test any website for clickjacking vulnerabilities simply using its public URL, our tool is fast, secure, and reliable, If you're new and don't know how to use this tool consider reading  user guide <a class="glink" href="guide">user guide</a>
+        
+          </p>
+          </div>
+      </div>
+      <br><br>
+      <div class="container">
+        <div class="other txt">
+          <h3>Whats click jacking?</h3>
+          Clickjacking in simple terms is "A Technique hackers use to hijack a website.", hackers can use clickjacking to take anonymous activities on your website, Without admin's or the user's knowledge, they can even steal sensitive user data from users, like credit card information using clickjacking, and the user will be thinking it's website's admin asking them for credit card information, but in reality it's the hacker in between. 
+          <a class="glink" href="Whats-clickjacking">learn more about clickjacking.</a>
+        </div>
+      </div>
+      <br><br>
+      <div class="container">
+        <div class="other txt">
+          <h3>The Cat and Mouse Game of Clickjacking</h3>
+          Over the past few decades, there has been an ongoing battle between cybercriminals and cybersecurity experts. Cybercriminals, also known as hackers, come up with new ridiculous tricks every day to steal sensitive information and money. From the beginning, Cybersecurity experts have always defended against them. but the battle never ends since the hackers continue to find new ways to infiltrate systems undetected. And clickjacking is one of the most underestimated attacks, yet is also one of the most dangerous. Clickjacking might seem simple, but over-watching it can lead to dealing with heavy consequences.         
+        </div>
+      </div>
             <br> <br>
+            <hr>
+            <br>
+            <div class="faq-body">
+              <div class="container-faq">
+                <h2>Frequently Asked Questions</h2>
+                <div class="accordion">
+                  <div class="accordion-item">
+                    <button id="accordion-button-1" aria-expanded="false"><span class="accordion-title">Is the tool suitable for both cybersecurity professionals and website owners?</span><span class="icon" aria-hidden="true"></span></button>
+                    <div class="accordion-content">
+                      <p>Yes, this tool is used and loved by both, Website owners and cybersecurity professionals to identify and report clickjacking vulnerability in different websites. so feel free to use this tool whether you're the owner of a website or a cybersecurity expert.</p>
+                    </div>
+                  </div>
+                  <div class="accordion-item">
+                    <button id="accordion-button-2" aria-expanded="false"><span class="accordion-title">Does it test WordPress websites?</span><span class="icon" aria-hidden="true"></span></button>
+                    <div class="accordion-content">
+                      <p>Yes, Our tool is designed to test and identify any type of website to detect any potential clickjacking vulnerabilities. By doing so, it provides detailed information.</p>
+                    </div>
+                  </div>
+                  <div class="accordion-item">
+                    <button id="accordion-button-3" aria-expanded="false"><span class="accordion-title">Can this tool be used for testing local development environments?</span><span class="icon" aria-hidden="true"></span></button>
+                    <div class="accordion-content">
+                      <p>Yes, our tool can be used to test and identify both live and localhost i.e. (127.0.0.1:5500) websites, you can test a localhost website the same way you test a live website. To test a localhost website, First, grab the localhost URL of the page which is usually "http://127.0.0.1:5500/" and paste it into the tool and hit enter.</p>
+                    </div>
+                  </div>
+                  <div class="accordion-item">
+                    <button id="accordion-button-4" aria-expanded="false"><span class="accordion-title">Is this tool totally free?
+                    </span><span class="icon" aria-hidden="true"></span></button>
+                    <div class="accordion-content">
+                      <p>Yes, our tool is totally free to any cybersecurity expert or even business/website owners, however, it still costs us to keep it maintained and up-to-date, so it's optional to appreciate our service by buying our team a   
+                       <a class="glink" target="_blank" href="https://www.buymeacoffee.com/clickjacker"> couple of coffee cups.</a></p>
+                    </div>
+                  </div>
+                  <div class="accordion-item">
+                    <button id="accordion-button-5" aria-expanded="false"><span class="accordion-title">Is there a limit to the number of websites I can test?</span><span class="icon" aria-hidden="true"></span></button>
+                    <div class="accordion-content">
+                      <p>
+                        No, there's no limit to the number of websites you can test, so you don't have to worry about any limitations, whether you need this tool to test one website or one hundred our service remains the same for you, feel free to use this tool to identify and reporting the websites.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <br>
+            <hr> <br>
       <div class="cardsCon">
         <div class="grid">
 
@@ -99,7 +168,7 @@
               <path d="M1 2.828c.885-.37 2.154-.769 3.388-.893 1.33-.134 2.458.063 3.112.752v9.746c-.935-.53-2.12-.603-3.213-.493-1.18.12-2.37.461-3.287.811V2.828zm7.5-.141c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492V2.687zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z"/>
               </svg>
             </span>
-            <h4>Whats Click Jacking?</h4>
+            <h4>Learn more</h4>
             <p>
               Learn about Click Jacking / Ui Redressing attacks, what are they?
               how they attack you, totally under 5 mins !
@@ -177,7 +246,7 @@
             </div>
           </a>
 
-          <a target="_blank" href="https://www.buymeacoffee.com/clickjacker" class="card">
+          <a href="guide" class="card">
             <span class="icon">
               <svg
                 viewBox="0 0 24 24"
@@ -192,9 +261,9 @@
               <path d="m4.4.8-.003.004-.014.019a4.167 4.167 0 0 0-.204.31 2.327 2.327 0 0 0-.141.267c-.026.06-.034.092-.037.103v.004a.593.593 0 0 0 .091.248c.075.133.178.272.308.445l.01.012c.118.158.26.347.37.543.112.2.22.455.22.745 0 .188-.065.368-.119.494a3.31 3.31 0 0 1-.202.388 5.444 5.444 0 0 1-.253.382l-.018.025-.005.008-.002.002A.5.5 0 0 1 3.6 4.2l.003-.004.014-.019a4.149 4.149 0 0 0 .204-.31 2.06 2.06 0 0 0 .141-.267c.026-.06.034-.092.037-.103a.593.593 0 0 0-.09-.252A4.334 4.334 0 0 0 3.6 2.8l-.01-.012a5.099 5.099 0 0 1-.37-.543A1.53 1.53 0 0 1 3 1.5c0-.188.065-.368.119-.494.059-.138.134-.274.202-.388a5.446 5.446 0 0 1 .253-.382l.025-.035A.5.5 0 0 1 4.4.8Zm3 0-.003.004-.014.019a4.167 4.167 0 0 0-.204.31 2.327 2.327 0 0 0-.141.267c-.026.06-.034.092-.037.103v.004a.593.593 0 0 0 .091.248c.075.133.178.272.308.445l.01.012c.118.158.26.347.37.543.112.2.22.455.22.745 0 .188-.065.368-.119.494a3.31 3.31 0 0 1-.202.388 5.444 5.444 0 0 1-.253.382l-.018.025-.005.008-.002.002A.5.5 0 0 1 6.6 4.2l.003-.004.014-.019a4.149 4.149 0 0 0 .204-.31 2.06 2.06 0 0 0 .141-.267c.026-.06.034-.092.037-.103a.593.593 0 0 0-.09-.252A4.334 4.334 0 0 0 6.6 2.8l-.01-.012a5.099 5.099 0 0 1-.37-.543A1.53 1.53 0 0 1 6 1.5c0-.188.065-.368.119-.494.059-.138.134-.274.202-.388a5.446 5.446 0 0 1 .253-.382l.025-.035A.5.5 0 0 1 7.4.8Zm3 0-.003.004-.014.019a4.077 4.077 0 0 0-.204.31 2.337 2.337 0 0 0-.141.267c-.026.06-.034.092-.037.103v.004a.593.593 0 0 0 .091.248c.075.133.178.272.308.445l.01.012c.118.158.26.347.37.543.112.2.22.455.22.745 0 .188-.065.368-.119.494a3.198 3.198 0 0 1-.202.388 5.385 5.385 0 0 1-.252.382l-.019.025-.005.008-.002.002A.5.5 0 0 1 9.6 4.2l.003-.004.014-.019a4.149 4.149 0 0 0 .204-.31 2.06 2.06 0 0 0 .141-.267c.026-.06.034-.092.037-.103a.593.593 0 0 0-.09-.252A4.334 4.334 0 0 0 9.6 2.8l-.01-.012a5.099 5.099 0 0 1-.37-.543A1.53 1.53 0 0 1 9 1.5c0-.188.065-.368.119-.494.059-.138.134-.274.202-.388a5.446 5.446 0 0 1 .253-.382l.025-.035A.5.5 0 0 1 10.4.8Z"/>
               </svg>
             </span>
-            <h4>Buy us a Coffee</h4>
+            <h4>Tool guide</h4>
             <p>
-             Show your love and support by buying our developer team a copule cups of Coffee.
+             If you don't know how to use this tool here's a step by step guide to use this tool.
             </p>
             <div class="shine"></div>
             <div class="background">
@@ -220,42 +289,19 @@
           </a>
         </div>
       </div>
-      <hr>
+
       <footer>
+        <hr>
+        <br>
         <div class="fHead">
           <h3 class="fHeading">
             Click Jacking Tester
           </h3>
         </div>
-
-<div class="fIcons">
-  <div class="fb">
-    <a href="https://www.facebook.com/profile.php?id=61551680049313&mibextid=ZbWKwL" target="_blank">
-      <svg xmlns="http://www.w3.org/2000/svg" height="1.5em" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
-        <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
-      </svg>
-    </a>
-  </div>
-  <div class="insta">
-    <a href="https://instagram.com/clickjackingtester?igshid=MzMyNGUyNmU2YQ==" target="_blank">
-      <svg xmlns="http://www.w3.org/2000/svg" height="1.5em" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
-        <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"/>
-      </svg>
-    </a>
-            </div>
-            <div class="email">
-              <a href="mailto:click.jacking.tester@gmail.com" target="_blank">
-                <svg xmlns="http://www.w3.org/2000/svg"  height="1.5em" fill="currentColor" class="bi bi-envelope-at" viewBox="0 0 16 16">
-                  <path d="M2 2a2 2 0 0 0-2 2v8.01A2 2 0 0 0 2 14h5.5a.5.5 0 0 0 0-1H2a1 1 0 0 1-.966-.741l5.64-3.471L8 9.583l7-4.2V8.5a.5.5 0 0 0 1 0V4a2 2 0 0 0-2-2H2Zm3.708 6.208L1 11.105V5.383l4.708 2.825ZM1 4.217V4a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v.217l-7 4.2-7-4.2Z"/>
-                  <path d="M14.247 14.269c1.01 0 1.587-.857 1.587-2.025v-.21C15.834 10.43 14.64 9 12.52 9h-.035C10.42 9 9 10.36 9 12.432v.214C9 14.82 10.438 16 12.358 16h.044c.594 0 1.018-.074 1.237-.175v-.73c-.245.11-.673.18-1.18.18h-.044c-1.334 0-2.571-.788-2.571-2.655v-.157c0-1.657 1.058-2.724 2.64-2.724h.04c1.535 0 2.484 1.05 2.484 2.326v.118c0 .975-.324 1.39-.639 1.39-.232 0-.41-.148-.41-.42v-2.19h-.906v.569h-.03c-.084-.298-.368-.63-.954-.63-.778 0-1.259.555-1.259 1.4v.528c0 .892.49 1.434 1.26 1.434.471 0 .896-.227 1.014-.643h.043c.118.42.617.648 1.12.648Zm-2.453-1.588v-.227c0-.546.227-.791.573-.791.297 0 .572.192.572.708v.367c0 .573-.253.744-.564.744-.354 0-.581-.215-.581-.8Z"/>
-                </svg>
-              </a>
-            </div>
-          </div>
-<div class="fLinks">
+  <div class="fLinks">
   <a href="Privacy-policy">Privacy Policy</a>
   <a href="About-us">About us</a>
-  <a href="mailto:click.jacking.tester@gmail.com"  target="_blank">Contact us</a>
+  <a href="contact-us/">Contact us</a>
 </div>
   <div id="copyright">&#169; Copyright</div>
   <script>
