--- a/guide/index.html
+++ b/guide/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learn Whats Click Jacking vulnerbility?</title>
+    <title>Exploring Clickjacking Tester: A Step-by-Step Tutorial for Web Developers</title>
     <link rel="icon" href="https://i.ibb.co/CVZQ8Bt/Picsart-23-09-26-02-16-00-213.png">
     <meta name="keywords" content="Test Clickjacking, Online clickjacking test, Clickjacking tool, What is clickjacking, Fix clickjacking, Clickjacking
     vulnerability, Exploit clickjacking"/>
