--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Click Jacking Tester</title>
+    <title>Click Jacker Tool | BEST FREE Click Jacking Tester | Clickjacking Tester</title>
     <!-- adsense -->
     <meta name="keywords" content="FREE Clickjacking testing tool, with clickjacking POC and read about whats clickjacking Clickjacking tool, What is clickjacking, Fix clickjacking, Clickjacking vulnerability, Exploit clickjacking"/>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9344372779596610"
