--- a/index.html
+++ b/index.html
@@ -117,6 +117,15 @@
           Clickjacking can be a big threat to businesses and platforms by ruining their user trust and brand name, when a website that's vulnerable to clickjacking attacks gets attacked by a malicious hacker using clickjacking, the hacker would be able to convince the user that he's providing the information to the platform/business but the information will be taking the hacker in between without even getting caught. this tactic can be extremely dangerous as it ruins the user's trust immediately.         
         </div>
       </div>
+      <br><br>
+      <div class="container">
+        <div class="other txt">
+          <h3>Clickjacking effects on E-Commerc</h3>
+<br>
+          About more than 35% of all websites globally attacked by clickjacking are e-commerce websites, they're especially targeted and attacked by cybercriminals mainly because of their relationship with payment information. In modern days we all buy products from our favorite e-commerce websites and platforms and we enjoy the versatility of these platforms so we don't mind giving them our payment information. What if the information is also delivered to the hacker in between? Therefore e-commerce and payment-related websites should be safe from clickjacking before other websites.         
+        </div>
+      </div>
+<br><br>
             <br> <br>
             <hr>
             <br>
