--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <br><br>
       <div class="container">
         <div class="other txt">
-          <h3>Clickjacking effects on E-Commerc</h3>
+          <h3>Clickjacking effects on E-Commerce websites</h3>
 <br>
           About more than 35% of all websites globally attacked by clickjacking are e-commerce websites, they're especially targeted and attacked by cybercriminals mainly because of their relationship with payment information. In modern days we all buy products from our favorite e-commerce websites and platforms and we enjoy the versatility of these platforms so we don't mind giving them our payment information. What if the information is also delivered to the hacker in between? Therefore e-commerce and payment-related websites should be safe from clickjacking before other websites.         
         </div>
